--- a/app.json
+++ b/app.json
@@ -9,6 +9,6 @@
             "required": true        
         }
     },
-    "repository": "https://github.com/sbatrow/heroku-xray-vpn-server",
+    "repository": "https://github.com/gdsgm4/xrayy",
     "stack": "container"
 }
